Update README with run instructions and project details
Added instructions for running the project using IntelliJ IDEA and command line, along with usage guide, algorithm summary, future improvements, contributing guidelines, license information, and author details.